# ailaunch

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  pyproject.toml
ailaunch/: db.py  ui.py
claunch/: db.py  main.py  ui.py
